added role based authentication and privileges for admin and manager

--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,20 @@
 		</dependency>
 		<dependency>
 
+
 			<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
 
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
